# ai-security-capability-monitor

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
aiscm/: __init__.py  cli.py  config.py  dashboard.py  db.py  evaluator.py  research.py  taxonomy.py
config/: benchmarks.yaml  models.yaml  taxonomy.yaml
src/: aggregator.ts  alerter.ts  cli.ts  index.ts  scorer.ts  storage.ts  taxonomy.ts  timeline.ts
tests/: __init__.py  scorer.test.ts  test_config.py  test_db.py  test_evaluator.py  test_research.py  test_taxonomy.py
